fix: smart resolve

--- a/config/locales/models/zh-CN.yml
+++ b/config/locales/models/zh-CN.yml
@@ -3,6 +3,7 @@ zh-CN:
     user:
       sign_up: 用户注册
       sign_in: 用户登录
+      current: 当前登录用户
     post:
       create: 创建文章
       update: 修改文章
